--- a/GraphicEditor/Views/MainWindow.axaml
+++ b/GraphicEditor/Views/MainWindow.axaml
@@ -110,7 +110,7 @@
 						<TextBlock Text="Треугольник"/>
 					</ToolTip.Tip>
 				</RadioButton>
-				<RadioButton Classes="Figure" Content="Круг" Margin="0 20 0 0">
+				<RadioButton Classes="Figure" Content="Круг" Margin="0 20 0 0" Command="{Binding CreateCircleCommand}">
 					<Image Source="avares://GraphicEditor/Assets/Img/circle.png"
 						Height="27"
 						Width="27"
