--- a/GraphicEditor/Views/MainWindow.axaml
+++ b/GraphicEditor/Views/MainWindow.axaml
@@ -119,7 +119,35 @@
 						<TextBlock Text="Круг"/>
 					</ToolTip.Tip>
 				</RadioButton>
+
+        <!-- Размер фигуры -->
+        <Grid Margin="0 20 0 0">
+          <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+          </Grid.RowDefinitions>
+          <TextBlock Text="Размер" HorizontalAlignment="Center" Margin="0 0 0 5"/>
+          <StackPanel Orientation="Horizontal" Grid.Row="1">
+            <Slider Width="110" Minimum="10" Maximum="100" Value="50" HorizontalAlignment="Center"/>
+            <TextBlock Text="50" Margin="10 0 0 0" VerticalAlignment="Center"/>
+          </StackPanel>
+        </Grid>
+
+        <!-- Толщина фигуры -->
+        <Grid Margin="0 20 0 0">
+          <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+          </Grid.RowDefinitions>
+          <TextBlock Text="Толщина" HorizontalAlignment="Center" Margin="0 0 0 5"/>
+          <StackPanel Orientation="Horizontal" Grid.Row="1">
+            <Slider Width="110" Minimum="10" Maximum="100" Value="50" HorizontalAlignment="Center"/>
+            <TextBlock Text="50" Margin="10 0 0 0" VerticalAlignment="Center"/>
+          </StackPanel>
+        </Grid>
+        
 			</StackPanel>
+      
 			<!--цветовая схема-->
 			<Rectangle Fill="DarkGoldenrod"
 			   Height="180"
@@ -128,6 +156,7 @@
 			   Margin="0 0 0 10"/>
 
 		</Grid>
+    
 
 		<Grid Grid.Row = "1" Grid.Column="1">
 			<Canvas Name="DrawingCanvas" Background="AliceBlue" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
