--- a/GraphicEditor/Views/MainWindow.axaml
+++ b/GraphicEditor/Views/MainWindow.axaml
@@ -90,6 +90,7 @@
 				<Menu DockPanel.Dock="Top" >
 					<MenuItem Header="_Файл">
 						<MenuItem Header="_Открыть"/>
+						<MenuItem Header="_Сохранить" Command="{Binding SaveCommand}"/>
 						<Separator/>
 						<MenuItem Header="_Выйти"/>
 					</MenuItem>
