--- a/GraphicEditor/Views/MainWindow.axaml
+++ b/GraphicEditor/Views/MainWindow.axaml
@@ -122,7 +122,8 @@
 				<TextBlock x:Name="ModeText" Text="Способ создания фигуры:"
 						  Margin="0 20 0 0"/>
 				<ToggleButton Classes="Mode" Margin="0 10 0 0"
-							  RelativePanel.Below="ModeText"/>
+              IsChecked="{Binding IsManualMode, Mode=TwoWay}"
+              RelativePanel.Below="ModeText"/>
 			</RelativePanel>
 
 				<!--контейнер кнопок для фигур-->
