--- a/GraphicEditor/Views/MainWindow.axaml
+++ b/GraphicEditor/Views/MainWindow.axaml
@@ -91,6 +91,7 @@
 					<MenuItem Header="_Файл">
 						<MenuItem Header="_Открыть" Command="{Binding LoadCommand}"/>
 						<MenuItem Header="_Сохранить" Command="{Binding SaveCommand}"/>
+						<MenuItem Header="_Сохранить как..." Command="{Binding SaveAsCommand}"/>
 						<Separator/>
 						<MenuItem Header="_Выйти"/>
 					</MenuItem>
